<resources>
    <string name="app_name">FirebaseASTest</string>
    <string name="buttonsignup">buttonSignup</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="email" />
    <string name="log_in">log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter name</string>
    <string name="add_name">Add Name</string>
    <string name="rating">Rating</string>
</resources>